--- a/art-gallery/package.json
+++ b/art-gallery/package.json
@@ -14,7 +14,8 @@
     "bootstrap": "5.3",
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
